<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".fragments.armor.ArmorInfoFragment">
    <TextView
            android:text="@string/titlePlaceholder"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/armorName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/typeIcon"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
    <ImageView
            android:src="@drawable/ic_launcher_foreground"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/typeIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"/>
    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            tools:src="@tools:sample/avatars"
            android:id="@+id/armorIcon1"
            app:layout_constraintTop_toBottomOf="@+id/typeIcon"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:id="@+id/armorIcon2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            tools:src="@tools:sample/avatars"
            app:layout_constraintStart_toEndOf="@+id/armorIcon1"
            app:layout_constraintTop_toBottomOf="@+id/armorName"/>
    <ImageView
            android:id="@+id/armorIcon3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toBottomOf="@+id/armorName"
            app:layout_constraintStart_toEndOf="@+id/armorIcon2"
            />
    <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:weightSum="3"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/armorIcon2">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="4">
            <TextView
                    android:id="@+id/tableArmorText"
                    android:text="@string/rankPlaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/tableArmorPdef"
                    android:text="@string/pDef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/tableArmorMdef"
                    android:text="@string/mDef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/tableArmorTotal"
                    android:text="@string/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="4">
            <TextView
                    android:id="@+id/tableArmorMinLvl"
                    android:text="@string/levelOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/tableArmorMinPdef"
                    android:text="@string/numberPlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/tableArmorMinMdef"
                    android:text="@string/numberPlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/tableArmorMinTotal"
                    android:text="@string/numberPlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="4">
            <TextView
                    android:id="@+id/tableArmorMaxLvl"
                    android:text="@string/lvlPlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/tableArmorMaxPdef"
                    android:text="@string/numberPlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/tableArmorMaxMdef"
                    android:text="@string/numberPlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/tableArmorMaxTotal"
                    android:text="@string/numberPlaceholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">
            <ImageView
                    android:id="@+id/armorSkillIcon"
                    android:src="@drawable/ic_launcher_foreground"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:id="@+id/armorSkillName"
                    android:text="@string/titlePlaceholder"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/armorSkillIcon"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
                android:id="@+id/armorSkillDescription"
                android:text="@string/descriptionPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="60dp" />
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">
            <ImageView
                    android:id="@+id/armorSetIcon"
                    android:src="@drawable/ic_launcher_foreground"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:id="@+id/armorSetName"
                    android:text="@string/titlePlaceholder"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/armorSetIcon"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
                android:id="@+id/armorSetDescripton"
                android:text="@string/descriptionPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>