<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            app:cardElevation="50dp">

        <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:text="Order By"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/txtOrder"/>
            <com.google.android.material.button.MaterialButtonToggleGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2"
                    android:id="@+id/groupOrder"
                    app:singleSelection="true"
                    app:selectionRequired="true" >
                <Button
                        android:text="Desc."
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/btnDesc" android:layout_weight="1"
                        style="?attr/materialButtonOutlinedStyle" android:tag="DESC"
                        android:backgroundTint="@color/button_background_colour_dark" app:strokeWidth="1dp"/>
                <Button
                        android:text="Asc."
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/btnAsc" android:layout_weight="1"
                        style="?attr/materialButtonOutlinedStyle" android:tag="ASC"
                        android:backgroundTint="@color/button_background_colour_dark" app:strokeWidth="1dp"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>
            <TextView
                    android:text="Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtField"
            />
            <com.google.android.material.button.MaterialButtonToggleGroup
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/groupField"
                    app:singleSelection="true"
                    app:selectionRequired="true">
                <Button
                        android:text="Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/btnName" android:layout_weight="1"
                        style="?attr/materialButtonOutlinedStyle" android:tag="armor.name"
                        android:backgroundTint="@color/button_background_colour_dark" app:strokeWidth="1dp"/>
                <Button
                        android:text="Set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/btnSet" android:layout_weight="1"
                        style="?attr/materialButtonOutlinedStyle" android:tag="armor_set.set_name"
                        android:backgroundTint="@color/button_background_colour_dark" app:strokeWidth="1dp"/>
                <Button
                        android:text="@string/pDef"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/btnPdef" android:layout_weight="1"
                        style="?attr/materialButtonOutlinedStyle" android:tag="armor_stats.max_pdef"
                        android:backgroundTint="@color/button_background_colour_dark" app:strokeWidth="1dp"/>
                <Button
                        android:text="@string/mDef"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/btnMdef" android:layout_weight="1"
                        style="?attr/materialButtonOutlinedStyle" android:tag="armor_stats.max_mdef"
                        android:backgroundTint="@color/button_background_colour_dark" app:strokeWidth="1dp"/>
                <Button
                        android:text="@string/total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/btnTotal" android:layout_weight="1"
                        style="?attr/materialButtonOutlinedStyle"
                        android:tag="(armor_stats.max_pdef + armor_stats.max_mdef)"
                        android:backgroundTint="@color/button_background_colour_dark" app:strokeWidth="1dp"/>
                <Button
                        android:text="Type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/btnType" android:layout_weight="1"
                        style="?attr/materialButtonOutlinedStyle" android:tag="armor_type.type_name"
                        android:backgroundTint="@color/button_background_colour_dark" app:strokeWidth="1dp"/>
                <Button
                        android:text="Story"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/btnStory" android:layout_weight="1"
                        style="?attr/materialButtonOutlinedStyle" android:tag="armor_support_skill.skill_name"
                        android:backgroundTint="@color/button_background_colour_dark" app:strokeWidth="1dp"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>
            <Button
                    android:text="submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btnSubmit"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>